--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,9 @@ spring:
       dialect: org.hibernate.dialect.PostgreSQL95Dialect
       jdbc:
         time_zone: ${TZ:Europe/Moscow}
-      ddl-auto: ${SCHEMA_INIT:update}
+      ddl-auto: ${SCHEMA_INIT:validate}
+    generate-ddl: false
+    show-sql: false
   datasource:
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_DB:restaurant}
     username: ${DB_USER:postgres}
